[package]
name = "classsniffer"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
cssparser = "0.34.0"
oxc_allocator = "0.30.4"
oxc_ast = "0.30.4"
oxc_parser = "0.30.4"
oxc_span = "0.30.4"
